[project]
name = "teff"
version = "0.1.0"
description = ""
authors = [{ name = "xiongjia", email = "lexiongjia@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["flask (>=3.1.2,<4.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "src/" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[project.scripts]
cli = "teff.main:main"
